# tropek

./: .dockerignore  .env.example  .env.test  .env.test.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  config.yaml  docker-compose.yml  justfile  osv-scanner.toml  pyproject.toml  pyrightconfig.json  start_test_infra.sh  stop_test_infra.sh
adapters/mock/: Dockerfile  generate.py  pyproject.toml
adapters/mock/app/: csv_store.py  main.py
adapters/mock/scenarios/: change-point-transitions.yaml  office-apps.yaml  plugin-health.yaml  regression.yaml  stable.yaml  vm-infra.yaml
adapters/mock/tests/: test_csv_store.py  test_generator.py
adapters/mock/tropek_mock/: csv_store.py  main.py
adapters/prometheus/: .dockerignore  Dockerfile  README.md  pyproject.toml
adapters/prometheus/app/: config.py  main.py
adapters/prometheus/docs/: architecture.md
adapters/prometheus/tests/: test_aggregated_strategy.py  test_config.py  test_coordinator.py  test_e2e.py  test_job_manager.py  test_prometheus_client.py  test_range_query.py  test_raw_strategy.py  test_redis_repository.py  test_routes.py  test_schemas.py  test_stats.py  test_variable_substitutor.py
adapters/prometheus/tropek_prometheus/: config.py  main.py
adapters/protocol/: README.md  pyproject.toml
adapters/protocol/tropek_adapter_protocol/: __init__.py  models.py  testing.py
api/: Dockerfile  README.md  alembic.ini  openapi.json  pyproject.toml
api/alembic/: env.py  script.py.mako
api/alembic/versions/: 001_initial_schema.py  002_timescaledb_hypertable.py  002_timescaledb_hypertable_and_seed_data.py  003_domain_redesign.py  003_rename_path_to_label_path.py  004_add_period_end_to_change_points.py  005_add_found_by_to_change_points.py  005_change_point_transition_and_nullable_pct.py  006_reconcile_sli_values_index_and_slo_groups_fk.py  007_add_slo_evaluations_evaluation_id_index.py  27d4e408fa6f_003_baseline_pin_and_override.py  63404ff4de0e_slo_format_redesign.py  996447ce3314_rename_name_to_evaluation_name_and_add_.py  f3f402dbe77e_004_asset_types_and_fixes.py
api/app/: config.py  logging_config.py  main.py  queue.py
api/app/cache/: redis_cache.py
api/app/db/: middleware.py  models.py  session.py
api/docs/: architecture.md  change-points.md  configuration.md  database-layer.md  evaluation-engine.md  known-issues.md  repositories.md  schemas.md  testing.md  workflows.md
api/docs/research/: 01-core-infrastructure.md
api/tests/: conftest.py  test_config.py  test_db_imports.py  test_evaluation_helpers.py  test_qg_router.py  test_quality_gate_params.py  test_queue.py  test_schema_contracts.py  test_session_middleware.py  test_sli_params.py  test_sli_schema_validation.py  test_slo_params.py  test_slo_test_endpoint.py  test_slo_validate.py
api/tests/asset_meta/: test_schemas.py  test_service.py
api/tests/cache/: test_redis_cache.py
api/tests/change_points/: generators.py  test_detection_scenarios.py  test_detector.py  test_directionality.py  test_display_magnitude.py  test_generators.py  test_presenter_enrichment.py  test_worker_step.py
api/tests/common/: data_generators.py  test_exception_handlers.py  test_exceptions.py  test_input_types.py  test_openapi_postprocessor.py
api/tests/db/: conftest.py  test_annotation_category_repository.py  test_asset_repositories.py  test_assignments.py  test_baseline_query.py  test_binding_resolution.py  test_comparable_from_version.py  test_comparison_rules.py  test_datasource_repository.py  test_display_groups.py  test_duplicate_prevention.py  test_evaluation_names.py  test_evaluation_repository.py  test_evaluation_run_repository.py  test_finalize_sweeper.py  test_grouped_heatmap.py  test_grouped_heatmap_has_notes.py  test_heatmap_query.py  test_indexes.py  test_indicator_repository.py  test_indicator_round_trip.py  test_note_category_router.py  test_re_evaluation.py  test_retry.py  test_schema_consistency.py  test_sli_repository.py  test_slo_bindings.py  test_slo_groups.py  test_slo_repository.py  test_tag_mixin.py  test_trend_query.py  test_trigger_evaluate.py
api/tests/endpoints/: conftest.py  test_annotation_endpoints.py  test_baseline_pin_endpoints.py  test_heatmap_endpoints.py  test_invalidation_endpoints.py  test_override_endpoints.py  test_re_evaluation_endpoints.py  test_smoke.py
api/tests/engine/: test_adapter_client.py  test_comparison_rules.py  test_criteria.py  test_criteria_edge_cases.py  test_evaluation_helpers.py  test_evaluator.py  test_evaluator_failures.py  test_generator.py  test_params.py  test_re_evaluator.py  test_reeval_pin_conflict.py  test_regeneration.py  test_scoring.py  test_scoring_edge_cases.py  test_slo_builder.py  test_slo_parser.py  test_trend_assembler.py  test_trend_cache.py  test_trend_cache_dependency.py  test_trend_schemas.py  test_trigger.py  test_variables.py  test_variables_edge_cases.py  test_worker_finalize.py  test_worker_phases.py  test_worker_rollup.py
api/tests/helpers/: change_point_fixtures.py  data_generators.py
api/tests/quality_gate/: test_adapter_client.py  test_baselines.py  test_batch_scan.py  test_evaluation_helpers.py  test_heatmap_builder.py  test_params.py  test_presenter.py  test_queue.py  test_reeval_pin_conflict.py  test_resolve_all_slos.py  test_router.py  test_target_resolver.py  test_trigger.py  test_trigger_service.py  test_worker_helpers.py  test_worker_phases.py
api/tests/schemathesis/: conftest.py  test_schema.py  test_stateful.py
api/tests/services/: test_batch_scan.py  test_heatmap_builder.py  test_presenter.py  test_resolve_all_slos.py  test_target_resolver.py  test_trigger_service.py  test_worker_helpers.py
api/tests/sli_registry/: test_params.py  test_schemas.py
api/tests/slo_registry/: test_params.py  test_service.py  test_validate.py
api/tropek/: config.py  logging_config.py  main.py  queue.py
api/tropek/cache/: redis_cache.py
api/tropek/db/: middleware.py  models.py  retry.py  session.py
clients/python/: README.md  pyproject.toml
clients/python/docs/: architecture.md  (+1 more)
(+1167 files in other folders)
