[project]
name = "tropek-api"
version = "0.1.0"
description = "TROPEK — Trend Reporting and Objective Evaluation toolKit — API service"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "arq>=0.26",
    "redis>=5.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "python-multipart>=0.0.9",
    "structlog>=24.0",
    "hvac>=2.0",
    "tenacity>=8.3",
]

[project.scripts]
tropek-api = "app.main:app"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "mypy>=1.10",
    "ruff>=0.4",
    "types-pyyaml",
    "types-redis",
]
