[project]
name = "tropek-api"
version = "0.1.0"
description = "TROPEK — Trend Reporting and Objective Evaluation toolKit — API service"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.138.2",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "arq>=0.26",
    "redis>=5.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "structlog>=24.0",
    "python-dotenv>=1.0",
    "numpy>=2.0",
    "scipy>=1.14",
]

[project.scripts]
tropek-api = "tropek.main:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "mypy>=1.10",
    "ruff>=0.4",
    "types-pyyaml",
    "types-redis",
    "sqlalchemy[mypy]>=2.0",
    "fakeredis>=2.21",
    "schemathesis>=3.36",
    "pytest-xdist>=3.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tropek"]