[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tropek-adapter-mock"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = ["pytest>=8.0", "httpx>=0.28"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
