[project]
name = "tropek-adapter-prometheus"
version = "0.1.0"
description = "TROPEK — Prometheus data source adapter"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.138.2",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.14.2",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "tenacity>=8.3",
    "structlog>=24.0",
    "redis>=5.0",
    "numpy>=2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "respx>=0.21",
    "fakeredis>=2.21",
    "mypy>=1.10",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tropek_prometheus"]

