[project]
name = "tropek-adapter-protocol"
version = "0.1.0"
description = "TROPEK adapter contract — shared request/response models for data source adapters"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.13.4",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tropek_adapter_protocol"]
