[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tropek-client"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "click>=8.0",
]

[project.scripts]
tropek = "tropek_client.cli:cli"

[tool.pytest.ini_options]
asyncio_mode = "auto"
