[project]
name = "tropek-client"
version = "0.1.0"
description = "Typed Python client for the TROPEK quality gate API"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "click>=8.1",
]

[project.scripts]
tropek = "tropek_client.cli:cli"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.30",
    "respx>=0.22",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tropek_client"]
